--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "polished": "^4.2.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-slick": "^0.30.1",
     "styled-components": "^6.1.8",
     "styled-icons": "^10.47.0",
     "styled-media-query": "^2.1.2"
   },
   "devDependencies": {
+    "@types/react-slick": "^0.23.13",
     "@storybook/addon-essentials": "^7.6.7",
     "@storybook/addon-interactions": "^7.6.7",
     "@storybook/addon-links": "^7.6.7",
